--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </ul>
       </div>
     </aside>
-    <div class="visualizer">
+    <section class="visualizer">
       <div class="random">
         <svg viewBox="0 0 30 30 ">
           <path
@@ -74,7 +74,7 @@
         </svg>
       </div>
       <canvas id="canvas" width="700px" height="500px"></canvas>
-    </div>
+    </section>
     <!-- <div class="explore">
         <h1><i class="fa-regular fa-compass"></i> Explore</h1>
         <div class="artists">
@@ -108,7 +108,7 @@
           </div>
         </div>
       </div> -->
-    <div class="player">
+    <section class="player">
       <div class="info"><span></span> - <span></span></div>
       <div class="player-container">
         <div class="controls">
@@ -152,7 +152,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <script src="./script.js"></script>
   </body>
 </html>
