--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Audio visualizer</title>
   </head>
   <body>
-    <aside class="sidenav">
+    <aside class="sidenav collapsed">
       <div id="menu-toggle"><span></span></div>
       <h1 id="logo">Visualize Your Track</h1>
       <!-- <div class="search-box">
@@ -73,7 +73,8 @@
           ></path>
         </svg>
       </div>
-      <canvas id="canvas" width="700px" height="500px"></canvas>
+      <!-- width="700px" height="500px" -->
+      <canvas id="canvas">Your browser doesn't support canvas</canvas>
     </section>
     <!-- <div class="explore">
         <h1><i class="fa-regular fa-compass"></i> Explore</h1>
